# cafe-terminal

./: .build.yml  .travis.yml  AUTHORS  COPYING  Makefile.am  NEWS  README  autogen.sh  cafe-terminal.1  cafe-terminal.appdata.xml.in  cafe-terminal.desktop.in.in  cafe-terminal.pot  cafe-terminal.wrapper  configure.ac  index.html  make-scanbuild.sh  makepot  mate-terminal.desktop.in.in  mate-terminal.pot  output_5db53c306801d0f305b14b9e9ea8f0fa4fa23e7e  update-authors.pl
help/: Makefile.am  cafe-terminal.pot
help/C/: index.docbook  legal.xml
help/af/: af.po
help/am/: am.po
help/ar/: ar.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_CA/: en_CA.po
help/en_GB/: en_GB.po
help/eo/: eo.po
help/es/: es.po
help/es_AR/: es_AR.po
help/es_CL/: es_CL.po
help/es_CO/: es_CO.po
help/es_ES/: es_ES.po
help/es_MX/: es_MX.po
help/es_PR/: es_PR.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fr/: fr.po
help/fur/: fur.po
help/fy/: fy.po
help/ga/: ga.po
help/gl/: gl.po
help/gu/: gu.po
help/ha/: ha.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/id/: id.po
help/ie/: ie.po
help/ig/: ig.po
help/is/: is.po
(+612 files in other folders)
